--- a/fine_tuning/finetuning data prep.ipynb
+++ b/fine_tuning/finetuning data prep.ipynb
@@ -178,8 +178,7 @@
     "Data Prep is converting the dataset in the format required by the training software.\n",
     "\n",
     "* Trainig softwares like `tlr` require data in a [particular format](https://www.philschmid.de/fine-tune-llms-in-2024-with-trl).\n",
-    "* If training directly with pytorch as a `CausalLM` task, the data should be formatted as a continous sequence of text. If using a instruct-LLM like [Mistral-7B-Instruct](), the sequence should be formatted in same format as instruction tuning procedure for optimal performance. \n",
-    "\n"
+    "* If training directly with pytorch as a `CausalLM` task, the data should be formatted as a continous sequence of text. If using a instruct-LLM like [Mistral-7B-Instruct](https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.2#instruction-format), the sequence should be formatted in same format as instruction tuning procedure for optimal performance. "
    ]
   },
   {
@@ -195,7 +194,7 @@
    "source": [
     "## 3. Tokenization\n",
     "\n",
-    "Use the `tokenizer` associated with the LLM to the trained. "
+    "Use the `tokenizer` associated with the LLM to be trained. "
    ]
   },
   {
