--- a/fine_tuning/finetuning data prep.ipynb
+++ b/fine_tuning/finetuning data prep.ipynb
@@ -201,6 +201,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04df957f318e4256a65e1689770eead1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(\"google/gemma-2b\")\n",
+    "# model = AutoModelForCausalLM.from_pretrained(\"google/gemma-2b\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
