batch padding example

--- a/fine_tuning/finetuning data prep.ipynb
+++ b/fine_tuning/finetuning data prep.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Repo card metadata block was not found. Setting CardData to empty.\n"
+      "Repo card metadata block was not found. Setting CardData to empty.\n",
+      "WARNING:huggingface_hub.repocard:Repo card metadata block was not found. Setting CardData to empty.\n"
      ]
     },
     {
@@ -75,7 +76,7 @@
        "})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +97,7 @@
        "'### Human: Can you write a short introduction about the relevance of the term \"monopsony\" in economics? Please use examples related to potential monopsonies in the labour market and cite relevant research.### Assistant: \"Monopsony\" refers to a market structure where there is only one buyer for a particular good or service. In economics, this term is particularly relevant in the labor market, where a monopsony employer has significant power over the wages and working conditions of their employees. The presence of a monopsony can result in lower wages and reduced employment opportunities for workers, as the employer has little incentive to increase wages or provide better working conditions.\\n\\nRecent research has identified potential monopsonies in industries such as retail and fast food, where a few large companies control a significant portion of the market (Bivens & Mishel, 2013). In these industries, workers often face low wages, limited benefits, and reduced bargaining power, leading to a situation where they are dependent on the employer for their livelihood. This dependence can result in further suppression of wages and a decline in working conditions.\\n\\nOverall, the concept of monopsony is essential to understanding the dynamics of labor markets and the impact of market power on workers. Further research is needed to understand the extent and impact of monopsonies on the economy and to develop policies to address this issue.\\n\\nReferences:\\nBivens, J., & Mishel, L. (2013). The Pay of Corporate Executives and Financial Professionals as Evidence of Rents in Top 1 Percent Incomes. Journal of Economic Perspectives, 27(3), 57-78.### Human: Now explain it to a dog'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +130,7 @@
        "})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
        " 'rejected_rating': 1.0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,18 +195,21 @@
    "source": [
     "## 3. Tokenization\n",
     "\n",
-    "Use the `tokenizer` associated with the LLM to be trained. "
+    "Use the `tokenizer` associated with the LLM to be trained. \n",
+    "\n",
+    "* Tokenizer adds new columns to the dataset object.\n",
+    "* These new columns are `input_ids` and `attention_mask` and sometimes `token_type_ids` for BERT-like models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a17e68b35a454e54bc7dde35b0bdc593",
+       "model_id": "e8b06a51f30a4457a93545da7269bf83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,6 +219,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Some parameters are on the meta device device because they were offloaded to the cpu.\n"
+     ]
     }
    ],
    "source": [
@@ -226,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +248,7 @@
        " \" Assistant: >be me\\n>sister wants to watch the new hit romcom\\n>not a fan, but what the hell, its got a fantasy theme\\n>we're watching, but a sex scene comes up\\n>then another\\n>i keep looking away from the screen\\n>lotsofsex.jpg\\n>sister starts teasing me for my discomfort \\n\\nSo anyway, how did you get into Game of Thrones?\"]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +320,7 @@
        "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]], device='cuda:0')}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,18 +333,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tokenize entire dataset for training"
+    "#### Tokenize entire dataset for training\n",
+    "\n",
+    "* Usually we don't tokenize the entire dataset at once. This requires larger memory to store the tokenized data.\n",
+    "* Instead we use `dataset.map` function with tokenization function and `batched=True`. This will only load the batch of samples at a time in memory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bd625605bbd42d79507d8fbddf2e31c",
+       "model_id": "4397df8a09364684afeff3636ce74916",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +390,7 @@
        "})"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +660,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Batching with Padding and Truncation"
+    "### Batching with Padding and Truncation\n",
+    "\n",
+    "* Padding is not performed on entire dataset upto max length of the dataset. Instead it is performed on batches of samples upto max length in the batch. This help save compuation, memory and speed up things. This is called `dynamic batching`.\n",
+    "* During batching, its recommened to batch samples with similar length together, as this will save computational resources and memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Repo card metadata block was not found. Setting CardData to empty.\n",
+      "WARNING:huggingface_hub.repocard:Repo card metadata block was not found. Setting CardData to empty.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example of dynamic padding\n",
+    "from transformers import DataCollatorWithPadding\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "oa_dataset = load_dataset(\"timdettmers/openassistant-guanaco\", split='train')\n",
+    "\n",
+    "def tokenize_oa_sample(example):\n",
+    "    text_col = 'text'\n",
+    "    return tokenizer(example[text_col], truncation=True)\n",
+    "\n",
+    "tokenized_oa_dataset = oa_dataset.map(tokenize_oa_sample, batched=True)\n",
+    "tokenized_oa_dataset.remove_columns(['text'])\n",
+    "\n",
+    "data_collator = DataCollatorWithPadding(tokenizer)\n",
+    "train_dataloader = DataLoader(\n",
+    "    tokenized_oa_dataset, shuffle=True, batch_size=8, collate_fn=data_collator\n",
+    ")\n",
+    "\n"
    ]
   },
   {
