--- a/fine_tuning/trainer api.ipynb
+++ b/fine_tuning/trainer api.ipynb
@@ -10,8 +10,13 @@
         "\n",
         "Tutorial: [NLP Course / Fine-tuning](https://huggingface.co/learn/nlp-course/chapter3/)\n",
         "\n",
-        "* Full model training in 16 bit precision.\n",
-        "* Train all layers\n",
+        "This notebook does the following:\n",
+        "* Full model training\n",
+        "    * Full precision - 16 bit \n",
+        "    * Train all layers\n",
+        "* Due to heavy GPU memory requirements, we need larger GPU like A100.\n",
+        "\n",
+        "\n",
         "\n",
         "## Goal\n",
         "\n",
