--- a/fine_tuning/ft gpt2 using HF trainer.ipynb
+++ b/fine_tuning/ft gpt2 using HF trainer.ipynb
@@ -860,6 +860,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_pretrained(\".model/gpt2-eli5-ft/\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -868,15 +877,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf30a02a0fc9432abf5585230e49a6e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/304 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perplexity: 664.83\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
     "eval_results = trainer.evaluate()\n",
     "print(f\"Perplexity: {math.exp(eval_results['eval_loss']):.2f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "generator = pipeline(\"text-generation\", model=\".model/gpt2-eli5-ft/\", tokenizer=tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Somatic hypermutation allows the immune system to shut down the immune system and stop the immune system simply by closing the gap a while and simply by shutting off the other gap between a tiny tiny tiny tiny tiny tiny tiny tiny tiny tiny tiny tiny tiny\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"Somatic hypermutation allows the immune system to\"\n",
+    "print(generator(prompt)[0][\"generated_text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Somatic hypermutation allows the immune system to hyperred!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device).input_ids\n",
+    "\n",
+    "outputs = model.generate(inputs, max_new_tokens=100, do_sample=True, top_p=0.98, temperature=1)\n",
+    "\n",
+    "print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
