--- a/fine_tuning/ft gpt2 using HF trainer.ipynb
+++ b/fine_tuning/ft gpt2 using HF trainer.ipynb
@@ -450,10 +450,16 @@
     "    * So should it be part of the model input during training? But the `answer` is conditioned on the `question`.\n",
     "    * We can mask the tokens associated with the `question` part for loss and gradient calculation. Thus only the `answer` part will be used for training.\n",
     "    * This mask is not applied to attention mask as we want the `answer` to attention the `question` part.\n",
-    "    * How to do this in transformers library??? \n",
+    "    * How to do this in transformers library? This is done by setting `label` indices to `-100` for the `question` part as per the [docs](https://huggingface.co/docs/transformers/model_doc/gpt2#transformers.GPT2LMHeadModel.forward.labels). This is done bts by [torch.nn.CrossEntropyLoss](https://pytorch.org/docs/stable/generated/torch.nn.CrossEntropyLoss.html)\n",
+    "\n",
+    "\n",
     "* In this example, we only fine-tuned the model on the `answer` part.\n",
     "    * We are not teaching the model the `answer` to a given `question`.\n",
-    "    * This approach will help tune the tone or style of the `answer` part, which is the goal of this dataset.\n"
+    "    * This approach will help tune the tone or style of the `answer` part, which is the goal of this dataset.\n",
+    "\n",
+    "#### Left shifting the `label` indices by 1 for LM training\n",
+    "* This is automatically done by the transformers model class. [docs](https://github.com/huggingface/transformers/blob/820c46a707ddd033975bc3b0549eea200e64c7da/src/transformers/models/gpt2/modeling_gpt2.py#L1071)\n",
+    "* During tokenization and batch generation, we simply set `labels = input_ids`\n"
    ]
   },
   {
