--- a/fine_tuning/trainer api.ipynb
+++ b/fine_tuning/trainer api.ipynb
@@ -204,16 +204,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### About `DataCollators`\n",
+        "* DataCollatorForLanguageModeling does not pad. (unlike DataCollatorWithPadding which pads inputs)\n",
+        "* It is responsible for handling labels and setting label_ids to -100 if they are padded.\n",
+        "* It also creates labels = input_ids if labels are not provided.\n",
+        "\n",
+        "Summary about different DataCollator in this [blog](https://towardsdatascience.com/data-collators-in-huggingface-a0c76db798d2)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Note:\n",
-        "# DataCollatorForLanguageModeling does not pad. (unlike DataCollatorWithPadding which pads inputs)\n",
-        "# It is responsible for handling labels and setting label_ids to -100 if they are padded.\n",
-        "# It also creates labels = input_ids if labels are not provided.\n",
-        "\n",
         "data_collator = DataCollatorForLanguageModeling(tokenizer=tokenizer, mlm=False)"
       ]
     },
