--- a/fine_tuning/ft gpt2 using HF trainer.ipynb
+++ b/fine_tuning/ft gpt2 using HF trainer.ipynb
@@ -654,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `DataCollatorForLanguageModeling` for dynamic padding."
+    "Use `DataCollatorForLanguageModeling`"
    ]
   },
   {
