fine tuning example working

--- a/fine_tuning/finetuning data prep.ipynb
+++ b/fine_tuning/finetuning data prep.ipynb
@@ -702,11 +702,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Dummy dataset test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['text'],\n",
+       "    num_rows: 4\n",
+       "})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from datasets import Dataset\n",
+    "\n",
+    "dummy_dataset = {\n",
+    "    \"text\": [\n",
+    "        \"This is test 1.\",\n",
+    "        \"This is test 2. Much longer seq.\",\n",
+    "        \"This is test 3. Much longer seq. Much longer seq. Much longer seq.\",\n",
+    "        \"This is test 4. Short and sweet.\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "dummy_dataset = Dataset.from_dict(dummy_dataset)\n",
+    "dummy_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48c54d15b73e414db877f63b869d39ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/4 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['input_ids', 'attention_mask'],\n",
+       "    num_rows: 4\n",
+       "})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def dummy_tokenize_function(example):\n",
+    "    input_text = example[\"text\"]\n",
+    "    # tokenize the text\n",
+    "    return tokenizer(\n",
+    "        input_text,\n",
+    "        # text_target=input_text,     # input is same as output. left shifting of labels is done by the transformers model\n",
+    "        truncation=True,\n",
+    "        max_length=10,\n",
+    "        padding=True,         \n",
+    "        # return_tensors=\"pt\",\n",
+    "    )\n",
+    "\n",
+    "tokenized_dummy_dataset = dummy_dataset.map(dummy_tokenize_function, batched=True, remove_columns=[\"text\"])\n",
+    "tokenized_dummy_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': [[0, 0, 0, 2, 1596, 603, 2121, 235248, 235274, 235265],\n",
+       "  [2, 1596, 603, 2121, 235248, 235284, 235265, 19154, 5543, 28410],\n",
+       "  [2, 1596, 603, 2121, 235248, 235304, 235265, 19154, 5543, 28410],\n",
+       "  [2, 1596, 603, 2121, 235248, 235310, 235265, 13406, 578, 7786]],\n",
+       " 'attention_mask': [[0, 0, 0, 1, 1, 1, 1, 1, 1, 1],\n",
+       "  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tokenized_dummy_dataset[:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([[[     0,      0,      0,      2,   1596,    603,   2121, 235248,\n",
+       "          235274, 235265],\n",
+       "         [     2,   1596,    603,   2121, 235248, 235284, 235265,  19154,\n",
+       "            5543,  28410],\n",
+       "         [     2,   1596,    603,   2121, 235248, 235304, 235265,  19154,\n",
+       "            5543,  28410],\n",
+       "         [     2,   1596,    603,   2121, 235248, 235310, 235265,  13406,\n",
+       "             578,   7786]]]), 'attention_mask': tensor([[[0, 0, 0, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]]), 'labels': tensor([[[  -100,   -100,   -100,      2,   1596,    603,   2121, 235248,\n",
+       "          235274, 235265],\n",
+       "         [     2,   1596,    603,   2121, 235248, 235284, 235265,  19154,\n",
+       "            5543,  28410],\n",
+       "         [     2,   1596,    603,   2121, 235248, 235304, 235265,  19154,\n",
+       "            5543,  28410],\n",
+       "         [     2,   1596,    603,   2121, 235248, 235310, 235265,  13406,\n",
+       "             578,   7786]]])}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from transformers import DataCollatorForLanguageModeling\n",
+    "\n",
+    "# dummy_datacollator = DataCollatorWithPadding(tokenizer=tokenizer, padding=\"longest\")\n",
+    "dummy_datacollator = DataCollatorForLanguageModeling(tokenizer=tokenizer, mlm=False)\n",
+    "\n",
+    "samples = tokenized_dummy_dataset[:4]\n",
+    "samples = [samples]\n",
+    "dc_output = dummy_datacollator(samples)\n",
+    "dc_output"
+   ]
   }
  ],
  "metadata": {
