--- a/fine_tuning/trainer api.ipynb
+++ b/fine_tuning/trainer api.ipynb
@@ -908,6 +908,245 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Full training loop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# free gpu\n",
+        "del model\n",
+        "del trainer\n",
+        "\n",
+        "import torch\n",
+        "torch.cuda.empty_cache()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Create data loader"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "tokenized_datasets.set_format(\"torch\")\n",
+        "\n",
+        "train_dataloader = DataLoader(tokenized_datasets[\"train\"], shuffle=True, batch_size=8)\n",
+        "eval_dataloader = DataLoader(tokenized_datasets[\"test\"], batch_size=8)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# test a batch\n",
+        "for batch in train_dataloader:\n",
+        "    break\n",
+        "{k: v.shape for k, v in batch.items()}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "7b4caca4f5434e08990eecebe21aacdb",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "from transformers import AutoModelForCausalLM\n",
+        "\n",
+        "model = AutoModelForCausalLM.from_pretrained(MODEL_NAME, device_map=\"auto\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "device(type='cuda', index=0)"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "device = model.device\n",
+        "device"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Optimizer and LR scheduler"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from torch.optim import AdamW\n",
+        "\n",
+        "optimizer = AdamW(model.parameters(), lr=5e-5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from transformers import get_scheduler\n",
+        "\n",
+        "num_epochs = 1\n",
+        "num_training_steps = num_epochs * len(train_dataloader)\n",
+        "lr_scheduler = get_scheduler(\n",
+        "    name=\"linear\", optimizer=optimizer, num_warmup_steps=0, num_training_steps=num_training_steps\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Training loop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "becc5110bb3c4b9599d58dac8033ff80",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/1231 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2024/03/22 20:57:04 WARNING mlflow.utils.autologging_utils: You are using an unsupported version of transformers. If you encounter errors during autologging, try upgrading / downgrading transformers to a supported version, or try upgrading MLflow.\n",
+            "2024/03/22 20:57:04 INFO mlflow.tracking.fluent: Autologging successfully enabled for transformers.\n",
+            "2024/03/22 20:57:04 WARNING mlflow.spark: With Pyspark >= 3.2, PYSPARK_PIN_THREAD environment variable must be set to false for Spark datasource autologging to work.\n",
+            "2024/03/22 20:57:04 INFO mlflow.tracking.fluent: Autologging successfully enabled for pyspark.\n"
+          ]
+        }
+      ],
+      "source": [
+        "from tqdm.auto import tqdm\n",
+        "\n",
+        "progress_bar = tqdm(range(num_training_steps))\n",
+        "\n",
+        "with mlflow.start_run(experiment_id=exp.id):\n",
+        "    mlflow.autolog()\n",
+        "    \n",
+        "    # training\n",
+        "    model.train()\n",
+        "    for epoch in range(num_epochs):\n",
+        "        for batch in train_dataloader:\n",
+        "            batch = {k: v.to(device) for k, v in batch.items()}\n",
+        "            outputs = model(**batch)\n",
+        "            loss = outputs.loss\n",
+        "            loss.backward()\n",
+        "\n",
+        "            optimizer.step()\n",
+        "            lr_scheduler.step()\n",
+        "            optimizer.zero_grad()\n",
+        "            progress_bar.update(1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Evaluate"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "import evaluate\n",
+        "\n",
+        "\n",
+        "metric = evaluate.load(\"accuracy\")\n",
+        "model.eval()\n",
+        "for batch in eval_dataloader:\n",
+        "    batch = {k: v.to(device) for k, v in batch.items()}\n",
+        "    with torch.no_grad():\n",
+        "        outputs = model(**batch)\n",
+        "\n",
+        "    logits = outputs.logits\n",
+        "    predictions = torch.argmax(logits, dim=-1)\n",
+        "    metric.add_batch(predictions=predictions, references=batch[\"labels\"])\n",
+        "\n",
+        "metric.compute()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Accelerate library - to train on multiple devices / GPUs"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
