add ref to article on finetuning

--- a/fine_tuning/finetuning data prep.ipynb
+++ b/fine_tuning/finetuning data prep.ipynb
@@ -13,7 +13,9 @@
     "- Preprocessing : prepare input and output based on FT objective\n",
     "- Tokenization : tokenize input and output\n",
     "- Batching : prepare batches for training\n",
-    "- Train / Test split"
+    "- Train / Test split\n",
+    "\n",
+    "Ref: [Wandb - How to implement fine-tuning of an LLM - Part 1: Dataset for Instruction Tuning](https://wandb.ai/capecape/alpaca_ft/reports/How-to-implement-fine-tuning-of-an-LLM-Part-1-Dataset-for-Instruction-Tuning--Vmlldzo1NTcxNzE2)"
    ]
   },
   {
